ci: notify on healthcheck failure (create issue + optional Slack)

--- a/.github/workflows/prod-healthcheck.yml
+++ b/.github/workflows/prod-healthcheck.yml
@@ -25,3 +25,19 @@ jobs:
           PROD_ADMIN_USERNAME: ${{ secrets.PROD_ADMIN_USERNAME }}
           PROD_ADMIN_PASSWORD: ${{ secrets.PROD_ADMIN_PASSWORD }}
         run: node ./scripts/check-public.js
+
+      - name: Create issue on failure
+        if: ${{ failure() }}
+        uses: actions/github-script@v6
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const title = `Prod healthcheck failed on ${process.env.GITHUB_REF_NAME || 'main'}`;
+            const body = `The scheduled prod healthcheck workflow failed. Check the Actions logs: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}`;
+            await github.rest.issues.create({ owner: context.repo.owner, repo: context.repo.repo, title, body });
+
+      - name: Slack notification on failure
+        if: ${{ failure() && secrets.SLACK_WEBHOOK }}
+        run: |
+          payload=$(jq -n --arg txt "Prod healthcheck failed: $GITHUB_REPOSITORY run $GITHUB_RUN_ID" '{text: $txt}')
+          curl -s -X POST -H 'Content-type: application/json' --data "$payload" ${{ secrets.SLACK_WEBHOOK }}
