--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -34,7 +34,25 @@ jobs:
       - name: Install SDK platforms and build-tools
         run: |
           export ANDROID_HOME=$ANDROID_SDK_ROOT
-          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT "platform-tools" "platforms;android-33" "build-tools;33.0.2"
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
+          echo "Listing cmdline-tools dir:"
+          ls -la $ANDROID_SDK_ROOT/cmdline-tools || true
+          echo "Running sdkmanager to install platform-tools, platforms;android-33, build-tools;33.0.2"
+          # Retry sdkmanager up to 3 times to handle transient network or lock issues
+          set -e
+          RETRIES=0
+          MAX_RETRIES=3
+          until [ $RETRIES -ge $MAX_RETRIES ]
+          do
+            $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --verbose "platform-tools" "platforms;android-33" "build-tools;33.0.2" && break
+            RETRIES=$((RETRIES+1))
+            echo "sdkmanager failed, attempt $RETRIES/$MAX_RETRIES"
+            sleep 3
+          done
+          if [ $RETRIES -ge $MAX_RETRIES ]; then
+            echo "sdkmanager failed after $MAX_RETRIES attempts" >&2
+            exit 1
+          fi
 
       - name: Add platform-tools to PATH
         run: echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
