--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -16,6 +16,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build web for Capacitor (mobile)
+        run: npm run build:mobile:ci
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
