--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
     "backup": "mkdir -p backups && cp prisma/dev.db backups/backup-$(date +%Y%m%d-%H%M%S).db",
     "clean": "rm -rf .next && rm -rf node_modules/.cache",
     "build:mobile": "set MOBILE_BUILD=true && next build --no-lint && npx cap sync",
+  "build:mobile:ci": "MOBILE_BUILD=true next build --no-lint && npx cap sync",
     "android:dev": "npm run build:mobile && npx cap run android",
     "android:build": "npm run build:mobile && npx cap build android",
-    "android:open": "npx cap open android"
+    "android:open": "npx cap open android",
+    "vercel:env-commands": "node -e \"console.log('vercel env add NEXTAUTH_URL production\nvercel env add NEXTAUTH_SECRET production\nvercel env add DATABASE_URL production\nvercel env add NODE_ENV production')\""
+  },
+  "engines": {
+    "node": "22.x"
   },
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -42,19 +47,21 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/nprogress": "^0.2.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^12.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv-parse": "^6.0.0",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node-fetch": "^2.7.0",
     "nprogress": "^0.2.0",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
@@ -66,18 +73,20 @@
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "zod": "^4.0.5",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "tailwindcss": "^3.4.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47"
   },
   "devDependencies": {
+    "better-sqlite3": "^12.2.0",
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
