--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "test:build": "npm run type-check && npm run lint && npm run build",
     "backup": "mkdir -p backups && cp prisma/dev.db backups/backup-$(date +%Y%m%d-%H%M%S).db",
     "clean": "rm -rf .next && rm -rf node_modules/.cache",
-    "build:mobile": "set MOBILE_BUILD=true && next build --no-lint && npx cap sync",
-  "build:mobile:ci": "MOBILE_BUILD=true next build --no-lint && npx cap sync",
+    "build:mobile": "cross-env MOBILE_BUILD=true next build --no-lint && cross-env MOBILE_BUILD=true next export && npx cap sync",
+  "build:mobile:ci": "cross-env MOBILE_BUILD=true next build --no-lint && cross-env MOBILE_BUILD=true next export && npx cap sync",
     "android:dev": "npm run build:mobile && npx cap run android",
     "android:build": "npm run build:mobile && npx cap build android",
     "android:open": "npx cap open android",
+    "icons:generate": "node scripts/generate-icons.js",
     "vercel:env-commands": "node -e \"console.log('vercel env add NEXTAUTH_URL production\nvercel env add NEXTAUTH_SECRET production\nvercel env add DATABASE_URL production\nvercel env add NODE_ENV production')\""
   },
   "engines": {
@@ -49,6 +50,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nprogress": "^0.2.3",
+    "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -63,6 +65,7 @@
     "next-themes": "^0.4.6",
     "node-fetch": "^2.7.0",
     "nprogress": "^0.2.0",
+    "postcss": "^8.4.47",
     "prisma": "^6.11.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.8.0",
@@ -71,22 +74,22 @@
     "react-to-print": "^3.1.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^3.4.13",
     "uuid": "^11.1.0",
     "zod": "^4.0.5",
-    "zustand": "^5.0.6",
-    "tailwindcss": "^3.4.13",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "better-sqlite3": "^12.2.0",
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "better-sqlite3": "^12.2.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
+    "jimp": "^0.16.1",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
