--- a/.github/workflows/android-ci-build.yml
+++ b/.github/workflows/android-ci-build.yml
@@ -16,9 +16,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Install dependencies
-        run: npm ci
+      - name: Cache npm
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-npm-
+
+      - name: Install dependencies (with retries)
+        run: |
+          set -euo pipefail
+          retries=3
+          until npm ci --no-audit --no-fund; do
+            retries=$((retries-1))
+            echo "npm ci failed, retries left: $retries"
+            if [ "$retries" -le 0 ]; then
+              echo "npm ci failed after retries"; exit 1
+            fi
+            sleep 5
+          done
 
       - name: Build Next (production)
         run: npm run build
@@ -26,8 +46,18 @@ jobs:
       - name: Setup CAPACITOR_SERVER_URL
         run: echo "CAPACITOR_SERVER_URL=https://pajo-pharma-delta.vercel.app" >> $GITHUB_ENV
 
-      - name: Sync Capacitor Android
-        run: npx cap sync android
+      - name: Sync Capacitor Android (with retries)
+        run: |
+          set -euo pipefail
+          retries=3
+          until npx cap sync android; do
+            retries=$((retries-1))
+            echo "npx cap sync failed, retries left: $retries"
+            if [ "$retries" -le 0 ]; then
+              echo "npx cap sync failed after retries"; exit 1
+            fi
+            sleep 5
+          done
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -42,9 +72,29 @@ jobs:
           build-tools: '33.0.2'
           components: 'platform-tools'
 
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*','**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
+
       - name: Build APK (Gradle)
         working-directory: android
-        run: ./gradlew assembleDebug --no-daemon
+        run: |
+          set -euo pipefail
+          retries=2
+          until ./gradlew assembleDebug --no-daemon --stacktrace; do
+            retries=$((retries-1))
+            echo "Gradle build failed, retries left: $retries"
+            if [ "$retries" -le 0 ]; then
+              echo "Gradle build failed after retries"; exit 1
+            fi
+            sleep 10
+          done
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
