--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "next build",
+    "build:prisma": "prisma generate && next build",
     "postinstall": "prisma generate",
     "build:analyze": "ANALYZE=true next build",
     "start": "next start",
